[gd_scene load_steps=18 format=3 uid="uid://chehya634olwm"]

[ext_resource type="Script" path="res://plants/equipment_plants/equipment_plant.gd" id="1_th0jc"]
[ext_resource type="Resource" uid="uid://buvhiwfqne60l" path="res://characters/player/Weapons/CactusWeapon.tres" id="2_fhktu"]
[ext_resource type="Script" path="res://misc/entity_sprites.gd" id="2_miaoc"]
[ext_resource type="Texture2D" uid="uid://cwpuaw130550" path="res://assets/sprites/Lowrezjam_-_Colored_sprites1.png" id="2_wpoxg"]
[ext_resource type="Texture2D" uid="uid://dduajjvmi5d0r" path="res://assets/sprites/Lowrezjam_-_Black_and_White_sprites1.png" id="3_1ycr4"]
[ext_resource type="Texture2D" uid="uid://b14pj41rw0evv" path="res://assets/sprites/Lowrez_jam_sprites_-_Black_and_white.png" id="3_7fkck"]
[ext_resource type="Shader" path="res://map/TilesetBlend.gdshader" id="5_j5346"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ru2v"]
atlas = ExtResource("2_wpoxg")
region = Rect2(70, 59, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_px1qa"]
atlas = ExtResource("2_wpoxg")
region = Rect2(69, 75, 9, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyin0"]
atlas = ExtResource("3_1ycr4")
region = Rect2(70, 59, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3adh"]
atlas = ExtResource("3_1ycr4")
region = Rect2(69, 75, 9, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0acxt"]
shader = ExtResource("5_j5346")
shader_parameter/blend_value = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kqf2y"]
atlas = ExtResource("2_wpoxg")
region = Rect2(72, 70, 6, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r1kj4"]
shader = ExtResource("5_j5346")
shader_parameter/blend_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_usba7"]
atlas = ExtResource("3_7fkck")
region = Rect2(74, 12, 4, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_alo7h"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_8x67s"]
radius = 1.0

[node name="Cactus" type="Node2D"]
script = ExtResource("1_th0jc")
weapon_r = ExtResource("2_fhktu")
plant_day = Array[Texture2D]([SubResource("AtlasTexture_3ru2v"), SubResource("AtlasTexture_px1qa")])
plant_night = Array[Texture2D]([SubResource("AtlasTexture_kyin0"), SubResource("AtlasTexture_n3adh")])

[node name="EntitySprites" type="Node2D" parent="." node_paths=PackedStringArray("day_sprite", "night_sprite")]
script = ExtResource("2_miaoc")
day_sprite = NodePath("PlantDay")
night_sprite = NodePath("PlantNight")

[node name="PlantDay" type="Sprite2D" parent="EntitySprites"]
material = SubResource("ShaderMaterial_0acxt")
texture = SubResource("AtlasTexture_kqf2y")

[node name="PlantNight" type="Sprite2D" parent="EntitySprites"]
material = SubResource("ShaderMaterial_r1kj4")
texture = SubResource("AtlasTexture_usba7")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = 2.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
text = "E"

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_alo7h")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_8x67s")

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
